tests/baselines/reference/constraints0.errors.txt
tests/cases/compiler/constraints0.ts(14,11): error TS2344: Type 'B' does not satisfy the constraint 'A'.
  Property 'a' is missing in type 'B' but required in type 'A'.


==== tests/cases/compiler/constraints0.ts (1 errors) ====
    interface A {
    	a: number;
    }
    
    interface B {
    	b: string;
    }
    
    interface C<T extends A> {
        x: T;
    }
    
    var v1: C<A>; // should work
    var v2: C<B>; // should not work
              ~
!!! error TS2344: Type '{|B|0|}' does not satisfy the constraint '{|A|1|}'.
!!! error TS2344:   Property 'a' is missing in type 'B' but required in type 'A'.
!!! related TS2728 tests/cases/compiler/constraints0.ts:2:2: 'a' is declared here.
!!! annotated symbol 0 tests/cases/compiler/constraints0.ts:5:11
!!! annotated symbol 1 tests/cases/compiler/constraints0.ts:1:11
    
    var y = v1.x.a; // 'a' should be of type 'number'